--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.MainController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.DepartementController">
    <children>
       <Label layoutX="155.0" layoutY="216.0" text="DEPARTEMENTS PAGE">
          <font>
