--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.MedecinController">
    <children>
-      <TableView id="medicTableView" fx:id="medicTableView" prefHeight="557.0" prefWidth="846.0" styleClass="medicTableView" stylesheets="@../css/app.css">
+      <TableView id="medicTableView" fx:id="medicTableView" prefHeight="557.0" prefWidth="846.0" styleClass="medicTableView" stylesheets="@../../css/app.css">
         <columns>
             <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
                 <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
