--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/departs-view.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.DepartementController">
    <children>
-      <Label layoutX="155.0" layoutY="216.0" text="DEPARTEMENTS PAGE">
-         <font>
-            <Font size="96.0" />
-         </font></Label>
+      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../css/app.css">
+         <columns>
+            <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
+               <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+            </TableColumn>
+            <TableColumn id="col" fx:id="libelle" prefWidth="142.0" text="Nom du département">
+               <cellValueFactory><PropertyValueFactory property="libelle" /></cellValueFactory>
+            </TableColumn>
+            <TableColumn id="col" fx:id="pays_id" prefWidth="142.0" text="Nom du pays">
+               <cellValueFactory><PropertyValueFactory property="pays_id" /></cellValueFactory>
+            </TableColumn>
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
