--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
@@ -7,21 +7,21 @@
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.MedecinController">
    <children>
-      <TableView id="medicTableView" fx:id="medicTableView" prefHeight="557.0" prefWidth="846.0" styleClass="medicTableView" stylesheets="@../../css/app.css">
+      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../css/app.css">
         <columns>
             <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
                 <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="lastname" prefWidth="142.0" text="Nom">
+            <TableColumn id="col" fx:id="nom" prefWidth="142.0" text="Nom">
                 <cellValueFactory><PropertyValueFactory property="nom" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="firstname" prefWidth="103.0" text="Prénom">
+            <TableColumn id="col" fx:id="prenom" prefWidth="103.0" text="Prénom">
                 <cellValueFactory><PropertyValueFactory property="prenom" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="speciality" minWidth="0.0" prefWidth="223.0" text="Spécialité">
+            <TableColumn id="col" fx:id="specialite" minWidth="0.0" prefWidth="223.0" text="Spécialité">
                 <cellValueFactory><PropertyValueFactory property="specialite" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="department" prefWidth="150.0" text="Département">
+            <TableColumn id="col" fx:id="departement_id" prefWidth="150.0" text="Département">
                 <cellValueFactory><PropertyValueFactory property="departement_id" /></cellValueFactory>
             </TableColumn>
         </columns>
