--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/countries-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/countries-view.fxml
@@ -15,6 +15,7 @@
             <TableColumn id="col" fx:id="libelle" prefWidth="142.0" text="Nom du Pays">
                <cellValueFactory><PropertyValueFactory property="libelle" /></cellValueFactory>
             </TableColumn>
+            <TableColumn id="col" fx:id="action" prefWidth="150.0" text=""/>
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
