29/03/2021 - 16:28 (A) Medic view stage. (A) Delete & modify on medic-view.fxml (A) Created an "execute" method in Database.java
(W) Same on Countries & Departements

--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/css/app.css
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/css/app.css
@@ -81,6 +81,36 @@
     -fx-font-family: 'Nunito Bold', sans-serif;
 }
 
+.button-delete {
+    -fx-background-color: #e74c3c;
+    -fx-text-fill: #FFFFFF;
+    -fx-font-family: 'Nunito Bold', sans-serif;
+    -fx-font-size: 13px;
+
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
+}
+
+.button-delete:hover {
+    -fx-background-color: #c0392b;
+    -fx-text-fill: #FFFFFF;
+    -fx-font-family: 'Nunito Bold', sans-serif;
+}
+
+.button-validate {
+    -fx-background-color: #2ecc71;
+    -fx-text-fill: #FFFFFF;
+    -fx-font-family: 'Nunito Bold', sans-serif;
+    -fx-font-size: 13px;
+
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
+}
+
+.button-validate:hover {
+    -fx-background-color: #27ae60;
+    -fx-text-fill: #FFFFFF;
+    -fx-font-family: 'Nunito Bold', sans-serif;
+}
+
 .button-soft {
     -fx-background-color: transparent;
     -fx-text-fill: #96aabe;
