30/03/2021 - 12:27 (A) Medics view new add button. (A) Created medic-view.fxml in "adds" folder (A) Created "Specialite" models & DAO.
(W) Same on Countries & Departements

--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/css/app.css
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/css/app.css
@@ -43,14 +43,15 @@
     -fx-background-color: #336ccf;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
     -fx-text-fill: #FFFFFF;
-
-    transition-duration: 4s;
+    -fx-font-family: 'Nunito Bold', sans-serif;
 }
 
 .button-blue:hover {
     -fx-background-color: rgb(46, 96, 185);
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
     -fx-text-fill: #FFFFFF;
+
+    -fx-font-family: 'Nunito Bold', sans-serif;
 }
 
 .button-transparent-onWhite {
