--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/popups/infos/country-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/popups/infos/country-view.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.MedecinViewController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.medecins.EditController">
    <children>
-      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../../css/app.css">
+      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../../../css/app.css">
          <columns>
             <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
                <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
