--- a/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
+++ b/src/main/resources/fr/skaayz/gsb_medecin_mac/views/tabs/medics-view.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="846.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.skaayz.gsb_medecin_mac.controllers.MedecinController">
    <children>
-      <TableView id="tableView" fx:id="tableView" prefHeight="557.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../css/app.css">
+      <TableView id="tableView" fx:id="tableView" layoutY="37.0" prefHeight="520.0" prefWidth="846.0" styleClass="tableView" stylesheets="@../../css/app.css">
         <columns>
             <TableColumn id="col" fx:id="id" prefWidth="75.0" text="#">
                 <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
@@ -18,10 +21,10 @@
             <TableColumn id="col" fx:id="prenom" prefWidth="103.0" text="Prénom">
                 <cellValueFactory><PropertyValueFactory property="prenom" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="adresse" prefWidth="103.0" text="Adresse">
+            <TableColumn id="col" fx:id="adresse" prefWidth="107.0" text="Adresse">
                 <cellValueFactory><PropertyValueFactory property="adresse" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="tel" prefWidth="103.0" text="N° Téléphone">
+            <TableColumn id="col" fx:id="tel" prefWidth="106.0" text="N° Téléphone">
                 <cellValueFactory><PropertyValueFactory property="tel" /></cellValueFactory>
             </TableColumn>
             <TableColumn id="col" fx:id="specialite" minWidth="0.0" prefWidth="223.0" text="Spécialité">
@@ -30,11 +33,18 @@
             <TableColumn id="col" fx:id="departement_id" prefWidth="150.0" text="Département">
                 <cellValueFactory><PropertyValueFactory property="departement_id" /></cellValueFactory>
             </TableColumn>
-            <TableColumn id="col" fx:id="action" prefWidth="150.0" text=""/>
+            <TableColumn id="col" fx:id="action" prefWidth="150.0" text="" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <TextField fx:id="search_textbar" layoutX="95.0" layoutY="5.0" prefHeight="27.0" prefWidth="616.0" promptText="Rechercher un médecin (nom, prénom, spécialité)" style="-fx-font-size: 13;" stylesheets="@../../css/app.css" />
+      <Button fx:id="search_button" layoutX="713.0" layoutY="5.0" minHeight="-Infinity" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="25.0" prefWidth="133.0" style="-fx-font-size: 13;" styleClass="button-blue" stylesheets="@../../css/app.css" text="Rechercher" />
+      <Button fx:id="add_button" layoutX="-1.0" layoutY="5.0" minHeight="-Infinity" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="25.0" prefWidth="94.0" style="-fx-font-size: 13;" styleClass="button-validate" stylesheets="@../../css/app.css" text="+ Ajouter">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
